(1) Removing gtools as dependency and a new function is added "rdirichlet_" (this rng is now integral part of oHMMed). (2) Improved helper functions for Normal model (3) Improved formatting in Normal model

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: oHMMed
 Type: Package
 Title: oHMMed
 Version: 0.9.0
-Imports: stats, ggplot2, gridExtra, ggmcmc, reshape2, scales, mistr, gtools, cvms, vcd
+Imports: stats, ggplot2, gridExtra, ggmcmc, reshape2, scales, mistr, cvms, vcd
 Author: CV, LCM, MM
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
