--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,31 @@
 Package: oHMMed
 Type: Package
-Title: oHMMed
+Title: Hidden Markov Models with ordered hidden states 
+    and emission densities with applications in population genetics
 Version: 0.9.0
 Imports: stats, ggplot2, gridExtra, ggmcmc, scales, mistr, cvms, vcd
-Author: CV, LCM, MM
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: GPL-2
+Authors@R: c(
+    person(given = c("Lynette", "Caitlin"), 
+           family = "Mikula", 
+           email = "",
+           role = "aut", 
+           comment = c(ORCID ="0000-0002-0252-4014")),
+    person(given = "Claus", 
+           family = "Vogl", 
+           email = "",
+           role = "aut", 
+           comment = ""),
+    person(given = "Michal",
+           family = "Majka", 
+           email = "michalmajka@hotmail.com",
+           role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-7524-8014")))
+Description: The oHMMed package contains an implementation of Hidden Markov Models
+    with ordered hidden states and emission densities with applications
+    in population genetics.
+URL: https://github.com/LynetteCaitlin/oHMMed, https://lynettecaitlin.github.io/oHMMed/
+BugReports: https://github.com/LynetteCaitlin/oHMMed/issues
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
