--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,24 @@
 Package: oHMMed
 Type: Package
-Title: Hidden Markov Models with ordered hidden states 
-    and emission densities with applications in population genetics
+Title: Hidden Markov Models with ordered hidden states and emission densities with applications in population genetics
 Version: 1.0.0
 Imports: stats, ggplot2, gridExtra, ggmcmc, scales, mistr, cvms, vcd
 Authors@R: c(
-    person(given = c("Lynette", "Caitlin"), 
-           family = "Mikula", 
-           email = "",
-           role = "aut", 
-           comment = c(ORCID ="0000-0002-0252-4014")),
-    person(given = "Claus", 
-           family = "Vogl", 
-           email = "",
-           role = "aut", 
-           comment = ""),
-    person(given = "Michal",
-           family = "Majka", 
-           email = "michalmajka@hotmail.com",
-           role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-7524-8014")))
+       person(given = c("Lynette", "Caitlin"), 
+              family = "Mikula", 
+              email = "lynettecaitlin@gmail.com",
+              role = "aut", 
+              comment = c(ORCID ="0000-0002-0252-4014")),
+       person(given = "Claus", 
+              family = "Vogl", 
+              email = "claus.vogl@vetmeduni.ac.at",
+              role = "aut", 
+              comment = c(ORCID ="0000-0002-3996-7863")),
+       person(given = "Michal",
+              family = "Majka", 
+              email = "michalmajka@hotmail.com",
+              role = c("aut", "cre"),
+              comment = c(ORCID = "0000-0002-7524-8014")))
 Description: The oHMMed package contains an implementation of Hidden Markov Models
     with ordered hidden states and emission densities with applications
     in population genetics.
