--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,11 @@ Title: Hidden Markov Models with ordered hidden states and emission densities wi
 Version: 1.0.0
 Imports: stats, ggplot2, gridExtra, ggmcmc, scales, mistr, cvms, vcd
 Authors@R: c(
+       person(given = "Michal",
+              family = "Majka", 
+              email = "michalmajka@hotmail.com",
+              role = c("aut", "cre"),
+              comment = c(ORCID = "0000-0002-7524-8014")),
        person(given = c("Lynette", "Caitlin"), 
               family = "Mikula", 
               email = "lynettecaitlin@gmail.com",
@@ -13,13 +18,11 @@ Authors@R: c(
               family = "Vogl", 
               email = "claus.vogl@vetmeduni.ac.at",
               role = "aut", 
-              comment = c(ORCID ="0000-0002-3996-7863")),
-       person(given = "Michal",
-              family = "Majka", 
-              email = "michalmajka@hotmail.com",
-              role = c("aut", "cre"),
-              comment = c(ORCID = "0000-0002-7524-8014")))
-Description: The oHMMed package contains an implementation of Hidden Markov Models with ordered hidden states and emission densities with applications in population genetics.
+              comment = c(ORCID ="0000-0002-3996-7863"))
+       )
+Description: The oHMMed package contains an implementation 
+    of Hidden Markov Models with ordered hidden states 
+    and emission densities with applications in population genetics.
 URL: https://github.com/LynetteCaitlin/oHMMed, https://lynettecaitlin.github.io/oHMMed/
 BugReports: https://github.com/LynetteCaitlin/oHMMed/issues
 License: GPL-3
