--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,6 +20,8 @@ home:
   links:
   - text: Usage Recommendations
     href: https://github.com/LynetteCaitlin/oHMMed/blob/main/UsageRecommendations.pdf
+  - text: Link to the Preprint
+    href: https://doi.org/10.1101/2023.06.26.546495
 
 reference:
 
