--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,32 +1,53 @@
-Package: oHMMed
 Type: Package
-Title: Hidden Markov Models with Ordered Hidden States and Emission Densities with Applications in Population Genetics
+Package: oHMMed
+Title: HMMs with Ordered Hidden States and Emission Densities
 Version: 1.0.0
-Depends: R (>= 3.5.0)
-Imports: stats, ggplot2, gridExtra, ggmcmc, scales, mistr, cvms, vcd
 Authors@R: c(
-       person(given = "Michal",
-              family = "Majka", 
-              email = "michalmajka@hotmail.com",
-              role = c("aut", "cre"),
-              comment = c(ORCID = "0000-0002-7524-8014")),
-       person(given = c("Lynette", "Caitlin"), 
-              family = "Mikula", 
-              email = "lynettecaitlin@gmail.com",
-              role = "aut", 
-              comment = c(ORCID ="0000-0002-0252-4014")),
-       person(given = "Claus", 
-              family = "Vogl", 
-              email = "claus.vogl@vetmeduni.ac.at",
-              role = "aut", 
-              comment = c(ORCID ="0000-0002-3996-7863"))
-       )
-Description: The oHMMed package contains an implementation of
-    Hidden Markov Models with ordered hidden states and emission densities
-    with applications in population genetics.
-URL: https://github.com/LynetteCaitlin/oHMMed, https://lynettecaitlin.github.io/oHMMed/
-BugReports: https://github.com/LynetteCaitlin/oHMMed/issues
+    person(given = "Michal",
+           family = "Majka", 
+           email = "michalmajka@hotmail.com",
+           role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-7524-8014")),
+    person(given = c("Lynette", "Caitlin"), 
+           family = "Mikula", 
+           email = "lynettecaitlin@gmail.com",
+           role = "aut", 
+           comment = c(ORCID ="0000-0002-0252-4014")),
+    person(given = "Claus", 
+           family = "Vogl", 
+           email = "claus.vogl@vetmeduni.ac.at",
+           role = "aut", 
+           comment = c(ORCID ="0000-0002-3996-7863"))
+    )
+Description: Inference using a class of Hidden Markov models
+    (HMMs) called 'oHMMed'(ordered HMM with emission densities
+    <doi:10.1101/2023.06.26.546495>): The 'oHMMed' algorithms identify 
+    the number of comparably homogeneous regions within observed sequences
+    with autocorrelation patterns. These are modelled as discrete hidden
+    states; the observed data points are then realisations of continuous
+    probability distributions with state-specific means that enable
+    ordering of these distributions. The observed sequence is labelled
+    according to the hidden states, permitting only neighbouring states
+    that are also neighbours within the ordering of their associated
+    distributions. The parameters that characterise these state-specific
+    distributions are then inferred. Relevant for application to genomic
+    sequences, time series, or any other sequence data with serial
+    autocorrelation.
 License: GPL-3
+URL: https://github.com/LynetteCaitlin/oHMMed,
+    https://lynettecaitlin.github.io/oHMMed/
+BugReports: https://github.com/LynetteCaitlin/oHMMed/issues
+Depends:
+    R (>= 3.5.0)
+Imports:
+    cvms,
+    ggmcmc,
+    ggplot2,
+    gridExtra,
+    mistr,
+    scales,
+    stats,
+    vcd
 Encoding: UTF-8
-RoxygenNote: 7.2.3
 LazyData: true
+RoxygenNote: 7.2.3
