--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,11 +2,18 @@
 #   params:
 #     bootswatch: spacelab
 
+# template:
+#   bootstrap: 5
+#   bootswatch: lux
+#   bslib:
+#     pkgdown-nav-height: 100px
+
 template:
   bootstrap: 5
-  bootswatch: lux
   bslib:
-    pkgdown-nav-height: 100px
+    primary: "#0054AD"
+    border-radius: 0.5rem
+    btn-border-radius: 0.25rem
 
 navbar:
  components:
